ingress.yml
# # Ingress
# # คือ เอาทุก service มารวมกันให้มีทางเข้าทางเดียว คือ ถ้ามีคนภายนอกต้องการเข้าถึง service ต่างๆ ingress จะเป็นตัวกลางในการเข้าถึง service ต่างๆ
# # ถ้าอยากไป service ไหนก็ไปตาม part นั้นๆ

# # networking.k8s.io/v1 จะเป็นของ Ingress
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata: # ข้อมูลเมตาของ Ingress
#   name: <ingress-name ตั้งชื่ออะไรก็ได้>
# spec:
#   rules:
#     - host: my-app.example.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: <service-name>
#                 port:
#                   number: 80

# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.0/deploy/static/provider/cloud/deploy.yaml
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.0/deploy/static/provider/baremetal/deploy.yaml
# เพื่อลง ingress-nginx
apiVersion: networking.k8s.io/v1 # kind: Ingress apiVersion จะเป็น networking.k8s.io/v1 เท่านั้น
kind: Ingress
metadata:
  name: my-ingress # ตั้งชื่อให้ ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # กำหนดให้ rewrite path เป็น /
# annotation ตัวนี้บอก NGINX Ingress Controller ว่า: เวลามี request ที่เข้า match กับ path ของ ingress → ให้ rewrite URL path ใหม่ก่อนส่งไปที่ backend service
spec:
  # ingressClassName คือ class ที่ใช้สำหรับ ingress นี้
  ingressClassName: nginx # ingressClassName: nginx = ระบุว่า Ingress Rules นี้ ต้องใช้ NGINX Ingress Controller เป็นตัวทำงานให้
  rules:
    - http:
        paths:
          - path: /testpart # Prefix path สำหรับ service นี้ ถ้าจะเข้าถึง service นี้ต้องเข้ามาที่ prefix นี้เท่านั้น
            pathType: Prefix
            backend:
              service:
                # ชื่อ service ตรงนี้ต้องตรงกับ ชื่อ service
                name: my-service # Prefix part /testpart จะวิ่งเข้าไปหา service my-service port 80
                port:
                  number: 80 # port ของ service(port)

# kubectl get ingress
# kubectl get ing
# เอาไว้สำหรับดู ingress ทั้งหมด

# kubectl describe ingress <ingress-name>
# เอาไว้สำหรับดูรายละเอียดของ ingress

#
#
#
# kubectl get all -n ingress-nginx เอาไว้ดู resource ทั้งหมดใน namespace ingress-nginx
# NAME                                            READY   STATUS      RESTARTS   AGE
# pod/ingress-nginx-admission-create-dtfc6        0/1     Completed   0          76m
# pod/ingress-nginx-admission-patch-w87qv         0/1     Completed   0          76m
# pod/ingress-nginx-controller-6c9c57f77f-v5fmz   1/1     Running     0          76m

# NAME                                         TYPE        CLUSTER-IP       EXTERNAL-IP   PORT(S)                      AGE
# service/ingress-nginx-controller             NodePort    10.106.106.147   <none>        80:30810/TCP,443:32442/TCP   76m
# service/ingress-nginx-controller-admission   ClusterIP   10.109.160.174   <none>        443/TCP                      76m

# NAME                                       READY   UP-TO-DATE   AVAILABLE   AGE
# deployment.apps/ingress-nginx-controller   1/1     1            1           76m

# NAME                                                  DESIRED   CURRENT   READY   AGE
# replicaset.apps/ingress-nginx-controller-6c9c57f77f   1         1         1       76m
# replicaset.apps/ingress-nginx-controller-7b66b968cf   0         0         0       76m

# NAME                                       STATUS     COMPLETIONS   DURATION   AGE
# job.batch/ingress-nginx-admission-create   Complete   1/1           31s        76m
# job.batch/ingress-nginx-admission-patch    Complete   1/1           31s        76m
#
#
#
#

# http://localhost:30000/ เข้าผ่าน service nodePort
# http://localhost:30810/testpart เข้าผ่าน ingress

# kubectl get service -n ingress-nginx เพื่อดู service ที่ถูกสร้างขึ้นโดย ingress-nginx เข้าผ่าน ingress-nginx-controller             NodePort    10.106.106.147   <none>        80:30810/TCP,443:32442/TCP   69m
